# piped_console

./: .clang-format  CMakeLists.txt  LICENSE.md  Makefile  README.md
example/: CMakeLists.txt
example/console/: CMakeLists.txt  main.cpp
example/emitter/: CMakeLists.txt  main.cpp
example/module/: CMakeLists.txt  dllmain.cpp
include/piped_console/: piped_console.hpp
src/: CMakeLists.txt  piped_console.cpp
